# IntCD

./: README.md
Canasta_Basica/: EDA.ipynb  ETL.ipynb  pyproject.toml  requirements.txt
